# assignment5_basecode

./: CMakeLists.txt  README.md
src/: a2.cpp  a5_main.cpp  array3D.h  filtering.cpp  floatimage.cpp  hdr.cpp
